--- a/css/styles.css
+++ b/css/styles.css
@@ -96,17 +96,17 @@ color: #ff4c68;
 /* TESTIMONIALS */
 
 #testimonials {
-padding: 7% 15%;
-/* text-align: center; */
+text-align: center;
 background-color: #ff4c68;
 color: white;
 }
 
 .testimonial-img {
   border-radius: 100%;
-  text-align: center;
-  padding-top: 5%;
-  padding-bottom: 5%;
+  margin-right: 3%;
+  width: 30%;
+  background: white; 
+  box-shadow: 0 0 100px white; 
 } 
 
 .double-quotes {
@@ -119,5 +119,30 @@ color: white;
   font-size: 4rem;
   font-weight: 700;
   line-height: 1.5;
+  padding-bottom: 5%;
 }
 
+/* PRESS */
+
+#press {
+  background-color: #ff4c68;
+  padding-bottom: 3%;
+  text-align: center;
+  padding-top: 3%;
+}
+
+.press-logo {
+  width: 15%;
+  margin: 20px 20px 50px;
+}
+
+/* CAROUSEL */
+.carousel-item {
+  padding: 7% 15%;
+}
+
+.stating{
+  font-family: "Montserrat";
+  font-size: 2rem;
+  font-weight: 500;
+}
